--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="scripts/app.js"></script>
 	<script src="scripts/controllers/loginCtrl.js"></script>
+	<script src="scripts/controllers/registerCtrl.js"></script>
 </body>
 </html>
